--- a/index.html
+++ b/index.html
@@ -32,23 +32,25 @@
           <!-- /.social-links -->
         </div>
         <!-- /.hero-header -->
+        <div class="hero-content">
+          <div class="hero-text">
+            <span class="hero-subtitle">Lorem</span>
+            <h1 class="hero-title">Lorem, ipsum.</h1>
+            <p class="hero-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo,
+              saepe sint? Eligendi labore repudiandae fuga. Lorem ipsum dolor
+              sit amet consectetur adipisicing elit. Nemo, saepe sint? Eligendi
+              labore repudiandae fuga.
+            </p>
+            <button class="button hero-button">Lorem ipsum</button>
+          </div>
+          <!-- /.hero-text -->
+          <div class="hero-avatar"></div>
+          <!-- /.hero-avatar -->
+        </div>
+        <!-- /.hero-content -->
       </div>
       <!-- /.container -->
     </header>
-    <div class="hero-content">
-      <div class="hero-text">
-        <span class="subtitle">Lorem</span>
-        <h1 class="hero-title">Lorem, ipsum.</h1>
-        <p class="hero-description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, saepe
-          sint? Eligendi labore repudiandae fuga.
-        </p>
-        <button class="button hero-button">Lorem ipsum</button>
-      </div>
-      <!-- /.hero-text -->
-      <div class="hero-avatar"></div>
-      <!-- /.hero-avatar -->
-    </div>
-    <!-- /.hero-content -->
   </body>
 </html>
