--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css\style.css" />
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
   </head>
   <body>
     <header class="hero">
@@ -34,23 +36,173 @@
         <!-- /.hero-header -->
         <div class="hero-content">
           <div class="hero-text">
-            <span class="hero-subtitle">Lorem</span>
-            <h1 class="hero-title">Lorem, ipsum.</h1>
+            <span class="hero-subtitle wow fadeInRight" data-wow-delay="0.2s"
+              >Фрилансер</span
+            >
+            <h1 class="hero-title">Шурыгина Юлия</h1>
             <p class="hero-description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo,
-              saepe sint? Eligendi labore repudiandae fuga. Lorem ipsum dolor
-              sit amet consectetur adipisicing elit. Nemo, saepe sint? Eligendi
-              labore repudiandae fuga.
+              Разрабатываю сайты для малого и среднего бизнеса. У меня можно
+              заказать дизайн и верстку небольшого сайта или интернет-магазина
             </p>
-            <button class="button hero-button">Lorem ipsum</button>
+            <button class="button hero-button">Бесплатная консультация</button>
           </div>
           <!-- /.hero-text -->
-          <div class="hero-avatar"></div>
+          <div class="hero-avatar wow fadeIn" data-wow-delay="1.5s"></div>
           <!-- /.hero-avatar -->
         </div>
         <!-- /.hero-content -->
       </div>
       <!-- /.container -->
     </header>
+    <main>
+      <sectuion class="features section">
+        <div class="container">
+          <h2 class="section-title">Со мной удобно работать</h2>
+          <div class="features-block">
+            <div class="features-item">
+              <img
+                src="image\features\offer-img.svg"
+                alt="По договору"
+                class="features-image"
+              />
+              <h3 class="features-title">По договору</h3>
+              <p class="features-text">
+                Предоставлю все документы для бухгалтерии: договоры, счета и
+                акты. Работаю как ИП без НДС.
+              </p>
+            </div>
+            <div class="features-item">
+              <img
+                src="image\features\deadline-img.svg"
+                alt="Точно в срок"
+                class="features-image"
+              />
+              <h3 class="features-title">Точно в срок</h3>
+              <p class="features-text">
+                В договоре прописана моя ответственность за срок проекта. Если
+                просрочу — плачу неустойку.
+              </p>
+            </div>
+            <div class="features-item">
+              <img
+                src="image\features\agreement-img.svg"
+                alt="Ценник под вас"
+                class="features-image"
+              />
+              <h3 class="features-title">Ценник под вас</h3>
+              <p class="features-text">
+                Если у вас нетиповой проект, сделаю рассчет цены за работу и
+                объясню, как складывается цена
+              </p>
+            </div>
+            <div class="features-item">
+              <img
+                src="image\features\steps-img.svg"
+                alt="Промежуточные итоги"
+                class="features-image"
+              />
+              <h3 class="features-title">Промежуточные итоги</h3>
+              <p class="features-text">
+                Показываю работу поэтапно, а не в последий момент перед крайним
+                сроком.
+              </p>
+            </div>
+            <div class="features-item">
+              <img
+                src="image\features\storage-img.svg"
+                alt="Хостинг и домен "
+                class="features-image"
+              />
+              <h3 class="features-title">Хостинг и домен</h3>
+              <p class="features-text">
+                Если мы договорились о цене проекта, в неё входит всё: домен и
+                хостинг на год + SSL сертификат.
+              </p>
+            </div>
+            <div class="features-item">
+              <img
+                src="image\features\conversation-img.svg"
+                alt="Не брошу после сдачи"
+                class="features-image"
+              />
+              <h3 class="features-title">Не брошу после сдачи</h3>
+              <p class="features-text">
+                Научу вас или вашего сотрудника пользоваться сайтом, запишу
+                видео-инструкции.
+              </p>
+            </div>
+          </div>
+          <!-- /.features-block -->
+        </div>
+        <!-- /.container -->
+      </sectuion>
+      <!-- /.features -->
+    </main>
+    <footer class="section">
+      <div class="container">
+        <h2 class="section-title">Свяжитесь со мной</h2>
+        <div class="contacts-block">
+          <form action="#" class="contacts-form">
+            <h4 class="form-title">
+              Можете просто оставить заявку, я позвоню вам сегодня
+            </h4>
+            <input
+              type="text"
+              class="input input-name"
+              placeholder="Ваше имя"
+            />
+            <input
+              type="text"
+              class="input input-phone"
+              placeholder="Ваш телефон"
+            />
+            <button class="button form-button">Бесплатная консультация</button>
+          </form>
+          <div class="contacts-text">
+            <div class="contacts-data">
+              <div class="contacts-phone">
+                <h4 class="contacts-title">Телефон</h4>
+                <a href="tel:+7 999 123 45 67" class="contacts-link"
+                  >+7 999-123-45-67</a
+                >
+              </div>
+              <!-- /.contacts-phone -->
+              <div class="contacts-mail">
+                <h4 class="contacts-title">Почта</h4>
+                <a href="mailto:ivanov@mail.ru" class="contacts-link"
+                  >ivanov@mail.ru</a
+                >
+              </div>
+              <!-- /.contacts-mail -->
+              <div class="contacts-social">
+                <h4 class="contacts-title">Соцсети</h4>
+                <a href="#" class="contacts-link">t.me/ivanov</a>
+                <a href="#" class="contacts-link">vk.me/ivanov</a>
+                <a href="#" class="contacts-link">fb.me/ivanov</a>
+              </div>
+              <!-- /.contacts-social -->
+            </div>
+            <div class="social-links">
+              <a href="https://github.com/Shurygina-Jul" class="social-link"
+                ><img src="image\social\github.svg" alt="GitHub"
+              /></a>
+              <a href="https://twitter.com/?lang=ru" class="social-link"
+                ><img src="image\social\twitter.svg" alt="twitter"
+              /></a>
+              <a href="https://www.instagram.com/?hl=ru" class="social-link"
+                ><img src="image\social\instagram.svg" alt="instagram"
+              /></a>
+              <a href="https://ru-ru.facebook.com/" class="social-link"
+                ><img src="image\social\facebook.svg" alt="facebook"
+              /></a>
+            </div>
+            <a href="#" class="contact-policy">Политика конфиденциальности</a>
+          </div>
+        </div>
+        <!-- /.contacts-block -->
+      </div>
+    </footer>
+    <script src="js/main.js"></script>
+    <script src="js/wow.min.js"></script>
   </body>
 </html>
