--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css\style.css" />
-    <link rel="stylesheet" href="css\swiper-bundle.min.css" />
     <link rel="stylesheet" href="css\animate.min.css" />
+    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="css\style.css" />
   </head>
+
   <body>
     <header class="hero">
       <div class="container">
@@ -55,7 +56,7 @@
       <!-- /.container -->
     </header>
     <main>
-      <sectuion class="features section">
+      <section class="features section">
         <div class="container">
           <h2 class="section-title">Со мной удобно работать</h2>
           <div class="features-block">
@@ -135,7 +136,7 @@
           <!-- /.features-block -->
         </div>
         <!-- /.container -->
-      </sectuion>
+      </section>
       <!-- /.features -->
       <section class="section progects">
         <div class="container">
@@ -255,9 +256,119 @@
                 </div>
                 <!-- /.progect-text -->
               </div>
+              <div class="swiper-slide progects-slide">
+                <img
+                  src="/image/agro.jpg"
+                  alt="Сайт строительной фирмы “Агростой”"
+                  class="progect-image"
+                />
+                <div class="progect-text">
+                  <h3 class="progect-title">
+                    Сайт строительной фирмы “Агростой”
+                  </h3>
+                  <div class="progect-time">
+                    <img
+                      src="image/img/time-icon.svg"
+                      alt="Срок"
+                      class="progect-icon"
+                    />
+                    <div class="progect-description">
+                      <div class="progect-subtitle">Сроки</div>
+                      <p class="progect-paragraf">4 рабочих дня</p>
+                    </div>
+                  </div>
+                  <!-- /.progect-time -->
+                  <div class="progect-cost">
+                    <img
+                      src="image/img/cost-icon.svg"
+                      alt="Стоимость"
+                      class="progect-icon"
+                    />
+                    <div class="progect-description">
+                      <div class="progect-subtitle">Стоимость</div>
+                      <p class="progect-paragraf">14 000 рублей</p>
+                    </div>
+                  </div>
+                  <!-- /.progect-cost -->
+                  <div class="progect-feedback">
+                    <img
+                      src="image/img/feedback-icon.svg"
+                      alt="Отзыв клиента"
+                      class="progect-icon"
+                    />
+                    <div class="progect-description">
+                      <div class="progect-subtitle">Отзыв клиента</div>
+                      <p class="progect-paragraf">
+                        Мне понравилось работать с Артемом, потому что он все
+                        время был на связи и предлагал свои решения, когда мы
+                        заходили в тупик с дизайном. Мне нужны были закрывающие
+                        документы для бухгалтерии, и Артем — тот редкий
+                        фрилансер, у которого с документами все в порядке
+                      </p>
+                    </div>
+                  </div>
+                  <!-- /.progect-feedback -->
+                </div>
+                <!-- /.progect-text -->
+              </div>
+              <div class="swiper-slide progects-slide">
+                <img
+                  src="/image/dom.jpg"
+                  alt="Сайт строительной фирмы “Домстрой”"
+                  class="progect-image"
+                />
+                <div class="progect-text">
+                  <h3 class="progect-title">
+                    Сайт строительной фирмы “Домстрой”
+                  </h3>
+                  <div class="progect-time">
+                    <img
+                      src="image/img/time-icon.svg"
+                      alt="Срок"
+                      class="progect-icon"
+                    />
+                    <div class="progect-description">
+                      <div class="progect-subtitle">Сроки</div>
+                      <p class="progect-paragraf">4 рабочих дня</p>
+                    </div>
+                  </div>
+                  <!-- /.progect-time -->
+                  <div class="progect-cost">
+                    <img
+                      src="image/img/cost-icon.svg"
+                      alt="Стоимость"
+                      class="progect-icon"
+                    />
+                    <div class="progect-description">
+                      <div class="progect-subtitle">Стоимость</div>
+                      <p class="progect-paragraf">14 000 рублей</p>
+                    </div>
+                  </div>
+                  <!-- /.progect-cost -->
+                  <div class="progect-feedback">
+                    <img
+                      src="image/img/feedback-icon.svg"
+                      alt="Отзыв клиента"
+                      class="progect-icon"
+                    />
+                    <div class="progect-description">
+                      <div class="progect-subtitle">Отзыв клиента</div>
+                      <p class="progect-paragraf">
+                        Мне понравилось работать с Артемом, потому что он все
+                        время был на связи и предлагал свои решения, когда мы
+                        заходили в тупик с дизайном. Мне нужны были закрывающие
+                        документы для бухгалтерии, и Артем — тот редкий
+                        фрилансер, у которого с документами все в порядке
+                      </p>
+                    </div>
+                  </div>
+                  <!-- /.progect-feedback -->
+                </div>
+                <!-- /.progect-text -->
+              </div>
             </div>
             <!-- If we need pagination -->
-            <div class="-pagination"></div>
+            <div class="progects-pagination"></div>
           </div>
         </div>
       </section>
